<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Result"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/et_first_num"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="first" />

    <EditText
        android:id="@+id/et_second_num"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="second" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Divide" />

</androidx.appcompat.widget.LinearLayoutCompat>